fix: add scroll on overflow content

--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,5 +1,6 @@
 
 .sidebar {
+   grid-column: 1/2;
     position: sticky;
     top: 0;
     width: 250px; 
