--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,16 +31,34 @@ $theme-colors: (
 
 html {
   font-size: 65.5%;
+
+}
+
+body {
+  min-height: 100vh;
   
+}
+
+.main__wrapper {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: auto 1fr;
+  overflow: hidden;
+  background-color: #f2f2f2;
+}
+
+main {
+  grid-column: 2;
+  overflow: auto;
 }
 
 .ls{
   letter-spacing: 1px;
 }
 
-.bg {
-  background-color: #edf2f7;
-}
+// .bg {
+//   background-color: #edf2f7;
+// }
 
 .icon {
   width: 30px;
